--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
+        "jquery": "^3.5.1",
+        "jquery-ui": "^1.12.1",
+        "laravel-mix": "^5.0.5",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
